--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,16 @@
   </head>
   <body>
     <h1>Welcome to we chat</h1>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      let socket = io();
+      socket.on('connect', () =>{
+        console.log('i am connect to the server');
+      });
+
+      socket.on('disconnect', ()=>{
+        console.log('disconnected from server');
+      })
+    </script>
   </body>
 </html>
