--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
       <input type="text" name="message" placeholder="Enter your message">
       <button>Send</button>
     </form>
+    <button id="send-location">Send Location</button>
+
+
+
+
+
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.1.1.min.js"></script>
     <script src="/js/app.js"></script>
