--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Express socket chat app</title>
   </head>
-  <body>
-    <p>Welcome to we chat</p>
+  <body class="chat">
+    <div class="chat__sidebar">
+      <h3>People</h3>
+      <div id="users"></div>
+    </div>
 
-    <ol id="messages"></ol>
-    <form id="message-form">
-      <input type="text" name="message" placeholder="Enter your message">
-      <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+    <div class="chat__main">
+      <ol id="messages" class="chat__messages"></ol>
+      <div class="chat__footer">
+        <form id="message-form" autocomplete="off">
+          <input type="text" name="message" placeholder="Enter your message" autofocus>
+          <button>Send</button>
+        </form>
+        <button id="send-location">Send Location</button>
+      </div>
+
+    </div>
+
 
 
 
