--- a/public/index.html
+++ b/public/index.html
@@ -2,61 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <title>Join | TchatApp</title>
     <link rel="stylesheet" href="/css/style.css">
-    <title>Express socket chat app</title>
   </head>
-  <body class="chat">
-    <div class="chat__sidebar">
-      <h3>People</h3>
-      <div id="users"></div>
+  <body class="centered-form">
+    <div class="centered-form__form">
+      <form class="" action="chat.html" method="get">
+        <div class="form-field">
+          <h3>Join Tchat</h3>
+        </div>
+        <div class="form-field">
+          <label for="name">Display name</label>
+          <input type="text" name="name" autofocus required>
+        </div>
+        <div class="form-field">
+          <label for="room">Room name</label>
+          <select class="" name="room">
+            <option value="general">General</option>
+            <option value="imagine">Imagine</option>
+          </select>
+        </div>
+        <div class="form-field">
+          <button>Join</button>
+        </div>
+      </form>
     </div>
-
-    <div class="chat__main">
-      <ol id="messages" class="chat__messages"></ol>
-      <div class="chat__footer">
-        <form id="message-form" autocomplete="off">
-          <input type="text" name="message" placeholder="Enter your message" autofocus>
-          <button>Send</button>
-        </form>
-        <button id="send-location">Send Location</button>
-      </div>
-
-    </div>
-    <script id="message-template" type="text/template">
-      <li class="message">
-        <div class="message__title">
-          <h4>{{from}}</h4>
-          <span>{{time}}</span>
-        </div>
-        <div class="message__body">
-          <p>{{text}}</p>
-        </div>
-      </li>
-    </script>
-
-    <script id="location-message-template" type="text/template">
-      <li class="message">
-        <div class="message__title">
-          <h4>{{from}}</h4>
-          <span>{{time}}</span>
-        </div>
-        <div class="message__body">
-          <p>
-            <a href="{{url}}" target="_blank">My current location</a>
-          </p>
-        </div>
-      </li>
-    </script>
-
-
-
-
-
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/libs/jquery-3.1.1.min.js"></script>
-    <script src="/js/libs/moment.js"></script>
-    <script src="/js/libs/mustache.min.js"></script>
-    <script src="/js/app.js"></script>
   </body>
 </html>
